# banexcoin-6plumas

./: .env.example  .env.prod.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.mjs
.claude/skills/banex-ai-anomaly/: SKILL.md
.claude/skills/banex-demo/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  filters.yml
.github/workflows/: check_branch.yml  check_pull_request.yml  check_push.yml  release.yml
apps/api/ai/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
apps/api/ai/src/: auth.py  config.py  features.py  io.py  main.py  model.py  schemas.py
apps/frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-entrypoint.sh  package.json  pnpm-lock.yaml
constitution/: design.md  mission.md  roadmap.md  tech-stack.md
docs/: README.md  architecture-sketch.md  deep-investigation.md  deployment.md  tech-notes.md  tech-stack.md  teoric-references.md
resources/: Reportes Banexcoin Bolivia Hackaton 2026.xlsx  local-seed-pago-qr.csv
scripts/: seed-local.sh
skills/banex-ai-anomaly/: SKILL.md
skills/banex-changelog/: SKILL.md
skills/banex-data-workbook/: SKILL.md
skills/banex-demo/: SKILL.md
skills/banex-frontend-console/: SKILL.md
skills/banex-private-api/: SKILL.md
skills/banex-product-rules/: SKILL.md
skills/banex-sync/: SKILL.md
skills/banex-todo/: SKILL.md
specs/feature/: mvp.md  plan.md  requirements.md  validation.md
(+226 files in other folders)
