[project]
name = "ai"
version = "0.0.1"
description = "Isolation Forest anomaly detection over Banexcoin QR transactions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "numpy>=2.1.0",
    "openpyxl>=3.1.5",
    "joblib>=1.4.2",
    "python-multipart>=0.0.20",
    "pyjwt>=2.12.1",
    "cryptography>=48.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]
